welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: '=' expected but ';' found.
	var i==nums.length; var a==-1;
                          ^indexOfMaxValue:2: error: '=' expected but ';' found.
	var i==nums.length; var a==-1;
                                     ^